# ninja-receiver-and-timer

./: .gitignore  README.md  autolaunch.sh  boot.sh  docker-compose.yml  index.html  run.sh
.github/workflows/: deploy_supabase_function.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
3D Print Files/Large Button Box/: bottom.3mf  bottom.stl  stretched box.blend  stretched box.blend1  stretched box.stl  top.3mf  top.stl
3D Print Files/Pi Case/: bottom.stl  top.stl
3D Print Files/Small Button Box/: BASE.3mf  E-Stop Box.3mf
arduino code/: channel_test.ino  channel_test_2.ino  script.ino
assets/: index-395b3986.js  index-710ba96d.js  index-7d940577.css  index-bd2f90fc.js  index-d9a2b2d9.js
backend/: Dockerfile  package.json  tsconfig.json
backend/src/: index.ts
button-scripts/: CMakeLists.txt  button.c  button.py  repeating_test.c  requirements.txt  single_test.c  test-script.py
frontend/: .env  .firebaserc  index.html  package.json  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/API/: api.ts
frontend/src/Constants/: Env.ts
frontend/src/Context/: SocketContext.tsx  TimerContext.tsx
frontend/src/components/: Display.css  Display.tsx  Home.tsx
frontend/src/utils/: utils.ts
frontend/supabase/: config.toml
frontend/supabase/functions/button-press/: index.ts
frontend/supabase/functions/keep-alive/: index.ts
nginx/: Dockerfile  README.md  nginx.conf
rf-receiver-script/: Dockerfile  build-image.sh  main.py  notes.txt  requirements.txt
